--- a/src/VisualPlan/index.module.less
+++ b/src/VisualPlan/index.module.less
@@ -1,3 +1,7 @@
 .TreeDiagramContainer {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+  'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji';
+
   height: 100%;
 }
