--- a/src/style/visual_plan.less
+++ b/src/style/visual_plan.less
@@ -1,7 +1,16 @@
-.TreeDiagramContainer {
+.treeDiagramContainer {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
   'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
   'Noto Color Emoji';
 
+  position: relative;
   height: 100%;
+}
+
+.dark {
+  background-color: #242526;
+}
+
+.light {
+  background-color: #f0f0f0;
 }
