--- a/src/style/defaul_node.less
+++ b/src/style/defaul_node.less
@@ -1,42 +1,57 @@
 .dark {
-    .nodeCard {
-      color: white;
-      background: rgb(77, 77, 77);
-      border: 1px solid #494949;
-  
-      &:hover {
-        box-shadow: 0 15px 18px -3px rgb(0 0 0 / 10%);
-      }
-    }
-  
-
-  }
-  
-  .light {
-    .nodeCard {
-      color: black;
-      background: white;
-      border: 1px solid #ededed;
-  
-      &:hover {
-        box-shadow: 0 15px 18px -3px rgb(0 0 0 / 10%);
-      }
-    }
-  }
-  
   .nodeCard {
-    box-shadow: 0 8px 20px 0 rgb(0 0 0 / 4%);
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .nodeForeginObject {
+    background: rgb(77, 77, 77);
+    border: 1px solid #494949;
+
+    .card-header {
+      color: black;
+    }
+
+    .card-body {
+      .content {
+        color: white;
+      }
+    }
+
     &:hover {
-      cursor: pointer;
+      box-shadow: 0 15px 18px -3px rgb(0 0 0 / 10%);
     }
   }
-  
-  .cardContentP {
-    margin-bottom: 5px;
+}
+
+.light {
+  .nodeCard {
+    background: white;
+    border: 1px solid #ededed;
+
+    &:hover {
+      box-shadow: 0 15px 18px -3px rgb(0 0 0 / 10%);
+    }
+  }
+}
+
+.nodeForeginObject {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.nodeCard {
+  box-shadow: 0 8px 20px 0 rgb(0 0 0 / 4%);
+  transition: all 0.2s ease-in-out;
+
+  .card-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
   }
 
-  
+  .card-body {
+    margin: 0.5rem;
+
+    .content {
+      padding: 0 0.5rem 0.5rem;
+      margin: 0;
+    }
+  }
+}
