fix(drawer): tabs dropdown menu click

--- a/src/style/defaul_node.less
+++ b/src/style/defaul_node.less
@@ -43,7 +43,7 @@
   .card-header {
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 0.5rem 1rem;
   }
 
   .card-body {
