style: support dark theme for drawer

--- a/src/style/visual_plan.less
+++ b/src/style/visual_plan.less
@@ -7,10 +7,10 @@
   height: 100%;
 }
 
-.dark {
-  background-color: #242526;
+.dark.treeDiagramContainer {
+    background-color: #242526;
 }
 
-.light {
-  background-color: #f0f0f0;
+.light.treeDiagramContainer {
+    background-color: #f0f0f0;
 }
