chore(thumbnail): update thumbnail story

--- a/src/style/button.less
+++ b/src/style/button.less
@@ -1,7 +1,7 @@
 .dark {
   .vp-btn {
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-    color: rgb(208 208 208 / 0.85);
+    color: rgb(255 255 255);
     background: #676666;
 
     &:hover {
