--- a/src/style/defaul_node.less
+++ b/src/style/defaul_node.less
@@ -52,6 +52,10 @@
     .content {
       padding: 0 0.5rem 0.5rem;
       margin: 0;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+
     }
   }
 }
